# uncensored-fleet

./: .gitignore  AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  fleet.yaml  install.ps1  install.sh  layman.md  pyproject.toml
docs/: INSTALL.md
examples/: help.txt  status.txt  version.txt
fleet/: __init__.py  __main__.py  cli.py  connect.py  download.py  harness.py  memory.py  models.py  serve.py
integrations/: webhook.py
scripts/: build-llamacpp.sh
tests/: test_connect.py  test_hardening.py  test_smoke.py
