[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-uncensored-fleet"
version = "0.3.1"
description = "Deploy and drive a local multi-model LLM fleet (llama.cpp) with an agent harness, engram memory, and a one-command CLI"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["llm", "local-llm", "llama.cpp", "agents", "fleet", "uncensored", "cognis-digital"]
classifiers = ["Development Status :: 4 - Beta", "License :: Other/Proprietary License"]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
hf = ["huggingface_hub>=0.23"]
engram = ["cognis-engram"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/uncensored-fleet"

[project.scripts]
"uncensored-fleet-emit" = "fleet.connect:emit_main"
fleet = "fleet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fleet"]

[tool.hatch.metadata]
allow-direct-references = true
